# arma3-mod-manager-console

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: deploy-docs.yml  test.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Controls.astro  Download.astro  Faq.astro  Features.astro  Footer.astro  Hero.astro
docs/src/layouts/: Layout.astro
docs/src/lib/: release.ts
docs/src/pages/: index.astro
docs/src/styles/: global.css
src/: errors.rs  main.rs
src/mod_manager/: config.rs  dependency_manager.rs  file_handler.rs  mod.rs  paginator.rs  terminal.rs  utils.rs
