[package]
name = "arma3-mod-manager-console"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
ureq = { version = "3.1.4", features = ["json"] }
